--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/eagle-io/winston-slack-webapi-transport.git"
   },
   "dependencies": {
-    "@slack/web-api": "^6.9.1",
+    "@slack/web-api": "6.9.0",
     "winston-transport": "^4.4.0"
   },
   "devDependencies": {
